@@ -3,6 +3,6 @@
     <span class="kel-bg krecursion">&nbsp;</span>
     <span class="kname">{connector1}{name}{connector2}</span>
     <span><span>&#8734;</span>{value}</span>
-    <em class="ktype">(Recursion)</em>
+    <em class="ktype">(recursion)</em>
   </div>
 </li>
